Use file NIO where possible.